Finalized Endpoint notes
